 - Added support for 280 Slides.
 - Moved the Mudim compatibility warning from AVIM's preferences dialog to the
   main Add-ons window. (The compatibility warning is not available in Firefox
   4.)
 - Added a help button to the preferences dialog that opens AVIM help
   documentation in a new window.
 - The Script Monitor can now disable Google Virtual Keyboard in webpages.
 - Added a button to Fennec's right toolbar for enabling and disabling AVIM.
 - Fixed the input method menu in the options panel in Fennec.
 - Added an option to recognize password boxes to the options panel in Fennec.
 - Fixed a regression in SeaMonkey where icons would not appear for the toolbar
   buttons except in the Customize Toolbar dialog.

Version ${Version} (${Date})
 - Added a Vietnamese Input menu under the Firefox menu (Windows and Linux).
 - Consolidated the various toolbar buttons into a single toolbar button that
   resembles the status bar panel. When upgrading to Firefox 29, this button is
   automatically added to the toolbar.
 - Firefox Sync can now keep AVIM preferences synchronized across different
   installations of Firefox and Firefox Mobile.
 - Fixed an issue in rich text controls where selecting text and pressing
   Backspace would delete one character too many.
 - Added a Brazilian Portuguese localization by Mauro José da Silva.
 - Added a Simplified Chinese localization by Wang.H.K.
 - The Script Monitor can now disable the Virtual Keyboard features at Google
   Tiếng Việt and Google Việt Nam.
 - Added support for Komodo Edit 8.x.
 - Added support for Silverlight 4 and above.
 - Added support for Eclipse's Orion editor.
 - Added support for Ymacs, an emacs-style code editor.
 - Removed support for 280 Slides, which has gone offline.
 - Fixed an issue in the Ace editor that in some cases caused the current line
   to be executed as unprivileged JavaScript code.
 - Adopted the Silvermel version of the AVIM logo as the extension icon.